[package]
name = "baidu_fanyi"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
md5 = "0.7.0"
rand = "0.8.5"
lazy_static = "1.4.0"
#futures = "0.3.28"

[profile.release]
strip = true
